--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="header">Guess the Number between 1 and 100</div>
         <div id = 'game' class='box'>
             <div id = "story">Make Your First Guess</div>
-            <form action = 'file:///Users/williamhogben/Documents/Code/huckleBuckle/huckleBuckle/index.html'>
+            <form action = 'http://whogben55.github.io/huckleBuckle'>
                 <input type ="number" name = "guess" id = 'guess'> <br/>
                 <input type="button" value="Guess" id="button">
             </form>
