--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>37 Signals</title>
+        <title>huckleBuckle</title>
         <link type="text/css" rel="stylesheet" href="main.css" />
         <link href='http://fonts.googleapis.com/css?family=Crimson+Text' rel='stylesheet' type='text/css'>
         <script src="jquery-1.10.2.js"></script>
