--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <script src="application.js"></script>
     </head>
     <body>
-        <div id = 'pic'><img src="" width="600" alt="hot or cold"/></div>
+        <div id = 'pic'></div>
         <div id="header">Guess the Number between 1 and 100</div>
         <div id = 'game' class='box'>
             <div id = "story">Make Your First Guess</div>
